# vrw

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/vrw/: __init__.py  reader.py  writer.py
src/vrw/_reader_backends/: __init__.py  base.py  closed_backend.py  cv2_backend.py
src/vrw/_writer_backends/: __init__.py  base.py  cv2_backend.py  pyav_backend.py
src/vrw/reader/: __init__.py  reader.py
src/vrw/reader/backends/: backend.py  closed_backend.py  cv2_backend.py
src/vrw/writer/: __init__.py  writer.py
src/vrw/writer/backends/: backend.py  cv2_backend.py  pyav_backend.py
