[project]
name = "vrw"
version = "0.1.0"
description = "Library for simple video reading and writing"
readme = "README.md"
authors = [
    { name = "tkclam", email = "thomas.lam@epfl.ch" }
]
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.11.0.86",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pre-commit>=4.2.0",
]
